Added initial support for compartmentalisation hypothesising. The goal is to allow the programmer to test out a compartmentalisation strategy without actually implementing it. This requires denoting (we choose to use macros) what should run in a sandbox (TNT_SANDBOX), which file descriptors are shared with sandboxes (TNT_SHAREDFD) and which global variables are shared with sandboxes (TNT_SHAREDVAR)

--- a/valgrind-3.7.0/taintgrind/Makefile.am
+++ b/valgrind-3.7.0/taintgrind/Makefile.am
@@ -4,7 +4,8 @@ include $(top_srcdir)/Makefile.tool.am
 # Headers
 #----------------------------------------------------------------------------
 
-pkginclude_HEADERS = 
+pkginclude_HEADERS = \
+	taintgrind.h
 
 noinst_HEADERS = \
 	tnt_include.h \
