--- a/Makefile.tool.am
+++ b/Makefile.tool.am
@@ -26,37 +26,37 @@ TOOL_LDADD_@VGCONF_PLATFORM_SEC_CAPS@ = \
 endif
 
 
-# -Wl,--build-id=none is needed when linking tools on Linux. Without this
-# flag newer ld versions (2.20 and later) create a .note.gnu.build-id at the
-# default text segment address, which of course means the resulting executable
-# is unusable. So we have to tell ld not to generate that, with --build-id=none.
+# -Wl,--build-id=none is needed when linking tools with a linker that only
+# knows -Ttext and not -Ttext-segment. Without this flag newer ld versions
+# (2.20 and later) create a .note.gnu.build-id at the default text segment
+# address, which of course means the resulting executable
+# is unusable. So we have to tell ld not to generate that, with
+# --build-id=none unless the linker supports -Ttext-segment.
 TOOL_LDFLAGS_COMMON_LINUX = \
 	-static -nodefaultlibs -nostartfiles -u _start @FLAG_NO_BUILD_ID@
 TOOL_LDFLAGS_COMMON_DARWIN = \
 	-nodefaultlibs -nostartfiles -Wl,-u,__start -Wl,-e,__start
-TOOL_LDFLAGS_COMMON_FREEBSD = -static \
-	-nodefaultlibs -nostartfiles -u _start @FLAG_NO_BUILD_ID@
 
 TOOL_LDFLAGS_X86_LINUX = \
 	$(TOOL_LDFLAGS_COMMON_LINUX) @FLAG_M32@
 
-TOOL_LDFLAGS_X86_FREEBSD = \
-	$(TOOL_LDFLAGS_COMMON_FREEBSD) @FLAG_M32@
-
 TOOL_LDFLAGS_AMD64_LINUX = \
 	$(TOOL_LDFLAGS_COMMON_LINUX) @FLAG_M64@
-
-TOOL_LDFLAGS_AMD64_FREEBSD = \
-	$(TOOL_LDFLAGS_COMMON_FREEBSD) @FLAG_M64@
 
 TOOL_LDFLAGS_PPC32_LINUX = \
 	$(TOOL_LDFLAGS_COMMON_LINUX) @FLAG_M32@
 
-TOOL_LDFLAGS_PPC64_LINUX = \
+TOOL_LDFLAGS_PPC64BE_LINUX = \
+	$(TOOL_LDFLAGS_COMMON_LINUX) @FLAG_M64@
+
+TOOL_LDFLAGS_PPC64LE_LINUX = \
 	$(TOOL_LDFLAGS_COMMON_LINUX) @FLAG_M64@
 
 TOOL_LDFLAGS_ARM_LINUX = \
 	$(TOOL_LDFLAGS_COMMON_LINUX) @FLAG_M32@
+
+TOOL_LDFLAGS_ARM64_LINUX = \
+	$(TOOL_LDFLAGS_COMMON_LINUX) @FLAG_M64@
 
 TOOL_LDFLAGS_S390X_LINUX = \
 	$(TOOL_LDFLAGS_COMMON_LINUX) @FLAG_M64@
@@ -66,6 +66,15 @@ TOOL_LDFLAGS_X86_DARWIN = \
 
 TOOL_LDFLAGS_AMD64_DARWIN = \
 	$(TOOL_LDFLAGS_COMMON_DARWIN) -arch x86_64
+
+# MIPS Linux default start symbol is __start, not _start like on x86 or amd
+TOOL_LDFLAGS_MIPS32_LINUX = \
+	-static -nodefaultlibs -nostartfiles -u __start @FLAG_NO_BUILD_ID@ \
+	@FLAG_M32@
+
+TOOL_LDFLAGS_MIPS64_LINUX = \
+	-static -nodefaultlibs -nostartfiles -u __start @FLAG_NO_BUILD_ID@ \
+	@FLAG_M64@
 
 # On Android we must ask for non-executable stack, not sure why.
 if VGCONF_PLATFORMS_INCLUDE_ARM_LINUX
@@ -96,17 +105,18 @@ LIBREPLACEMALLOC_AMD64_LINUX = \
 LIBREPLACEMALLOC_PPC32_LINUX = \
 	../coregrind/libreplacemalloc_toolpreload-ppc32-linux.a
 
-LIBREPLACEMALLOC_PPC64_LINUX = \
-	../coregrind/libreplacemalloc_toolpreload-ppc64-linux.a
+LIBREPLACEMALLOC_PPC64BE_LINUX = \
+	../coregrind/libreplacemalloc_toolpreload-ppc64be-linux.a
 
-LIBREPLACEMALLOC_X86_FREEBSD = \
-	../coregrind/libreplacemalloc_toolpreload-x86-freebsd.a
+LIBREPLACEMALLOC_PPC64LE_LINUX = \
+	../coregrind/libreplacemalloc_toolpreload-ppc64le-linux.a
 
 LIBREPLACEMALLOC_ARM_LINUX = \
 	../coregrind/libreplacemalloc_toolpreload-arm-linux.a
 
-LIBREPLACEMALLOC_AMD64_FREEBSD = \
-	../coregrind/libreplacemalloc_toolpreload-amd64-freebsd.a
+LIBREPLACEMALLOC_ARM64_LINUX = \
+	../coregrind/libreplacemalloc_toolpreload-arm64-linux.a
+
 LIBREPLACEMALLOC_X86_DARWIN = \
 	../coregrind/libreplacemalloc_toolpreload-x86-darwin.a
 
@@ -116,6 +126,11 @@ LIBREPLACEMALLOC_AMD64_DARWIN = \
 LIBREPLACEMALLOC_S390X_LINUX = \
 	../coregrind/libreplacemalloc_toolpreload-s390x-linux.a
 
+LIBREPLACEMALLOC_MIPS32_LINUX = \
+	../coregrind/libreplacemalloc_toolpreload-mips32-linux.a
+
+LIBREPLACEMALLOC_MIPS64_LINUX = \
+	../coregrind/libreplacemalloc_toolpreload-mips64-linux.a
 
 LIBREPLACEMALLOC_LDFLAGS_X86_LINUX = \
 	-Wl,--whole-archive \
@@ -132,9 +147,14 @@ LIBREPLACEMALLOC_LDFLAGS_PPC32_LINUX = \
 	$(LIBREPLACEMALLOC_PPC32_LINUX) \
 	-Wl,--no-whole-archive
 
-LIBREPLACEMALLOC_LDFLAGS_PPC64_LINUX = \
+LIBREPLACEMALLOC_LDFLAGS_PPC64BE_LINUX = \
 	-Wl,--whole-archive \
-	$(LIBREPLACEMALLOC_PPC64_LINUX) \
+	$(LIBREPLACEMALLOC_PPC64BE_LINUX) \
+	-Wl,--no-whole-archive
+
+LIBREPLACEMALLOC_LDFLAGS_PPC64LE_LINUX = \
+	-Wl,--whole-archive \
+	$(LIBREPLACEMALLOC_PPC64LE_LINUX) \
 	-Wl,--no-whole-archive
 
 LIBREPLACEMALLOC_LDFLAGS_ARM_LINUX = \
@@ -142,15 +162,11 @@ LIBREPLACEMALLOC_LDFLAGS_ARM_LINUX = \
 	$(LIBREPLACEMALLOC_ARM_LINUX) \
 	-Wl,--no-whole-archive
 
-LIBREPLACEMALLOC_LDFLAGS_X86_FREEBSD = \
+LIBREPLACEMALLOC_LDFLAGS_ARM64_LINUX = \
 	-Wl,--whole-archive \
-	$(LIBREPLACEMALLOC_X86_FREEBSD) \
+	$(LIBREPLACEMALLOC_ARM64_LINUX) \
 	-Wl,--no-whole-archive
 
-LIBREPLACEMALLOC_LDFLAGS_AMD64_FREEBSD = \
-	-Wl,--whole-archive \
-	$(LIBREPLACEMALLOC_AMD64_FREEBSD) \
-	-Wl,--no-whole-archive
 LIBREPLACEMALLOC_LDFLAGS_X86_DARWIN = \
 	$(LIBREPLACEMALLOC_X86_DARWIN)
 
@@ -162,6 +178,16 @@ LIBREPLACEMALLOC_LDFLAGS_S390X_LINUX = \
 	$(LIBREPLACEMALLOC_S390X_LINUX) \
 	-Wl,--no-whole-archive
 
+LIBREPLACEMALLOC_LDFLAGS_MIPS32_LINUX = \
+	-Wl,--whole-archive \
+	$(LIBREPLACEMALLOC_MIPS32_LINUX) \
+	-Wl,--no-whole-archive
+
+LIBREPLACEMALLOC_LDFLAGS_MIPS64_LINUX = \
+	-Wl,--whole-archive \
+	$(LIBREPLACEMALLOC_MIPS64_LINUX) \
+	-Wl,--no-whole-archive
+
 #----------------------------------------------------------------------------
 # General stuff
 #----------------------------------------------------------------------------
@@ -171,4 +197,6 @@ all-local: inplace-noinst_PROGRAMS inplace-noinst_DSYMS
 clean-local: clean-noinst_DSYMS
 
 install-exec-local: install-noinst_PROGRAMS install-noinst_DSYMS
+
+uninstall-local: uninstall-noinst_PROGRAMS uninstall-noinst_DSYMS
 
