Print native assembly instead of VEX

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,8 @@ TAINTGRIND_SOURCES_COMMON = \
 	tnt_main.c \
 	tnt_translate.c \
         copy.c \
-        tnt_smt2.c
+        tnt_smt2.c \
+        tnt_asm.c
 
 taintgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_SOURCES      = $(TAINTGRIND_SOURCES_COMMON)
 taintgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CPPFLAGS     = \
