#28: Add test case for memchr

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -12,7 +12,8 @@ check_PROGRAMS = heartbleed \
                  signstdin \
                  signstdin2 \
                  taint_stdin \
-                 misprint
+                 misprint \
+		 memchr
 
 heartbleed_SOURCES = heartbleed.c
 heartbleed_CFLAGS = -I../ -I../../include -g -O0
@@ -34,3 +35,5 @@ taint_stdin_SOURCES = taint_stdin.c
 taint_stdin_CFLAGS = -I../ -I../../include -g -O0
 misprint_SOURCES = misprint.c
 misprint_CFLAGS = -I../ -I../../include -g -O0 -fno-inline -fno-omit-frame-pointer -fno-stack-protector
+memchr_SOURCES = memchr.c
+memchr_CFLAGS = -I../ -I../../include -g -O0
