Compile tests/misprint.c with -no-pie (#36)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -35,7 +35,7 @@ signstdin2_CFLAGS = -I../ -I../../include -g -O0
 taint_stdin_SOURCES = taint_stdin.c
 taint_stdin_CFLAGS = -I../ -I../../include -g -O0
 misprint_SOURCES = misprint.c
-misprint_CFLAGS = -I../ -I../../include -g -O0 -fno-inline -fno-omit-frame-pointer -fno-stack-protector
+misprint_CFLAGS = -I../ -I../../include -g -O0 -fno-inline -fno-omit-frame-pointer -fno-stack-protector -no-pie
 memchr_SOURCES = memchr.c
 memchr_CFLAGS = -I../ -I../../include -g -O0
 checktaint_SOURCES = checktaint.c
