Fix x86 build issues

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,7 +33,7 @@ taintgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_SOURCES      = $(TAINTGRIND_SOURCES_COM
 taintgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CPPFLAGS     = \
 	$(AM_CPPFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
 taintgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CFLAGS       = \
-	$(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) -O2
+	$(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) -O2 -I./capstone-3.0.4/include
 taintgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_DEPENDENCIES = \
 	$(TOOL_DEPENDENCIES_@VGCONF_PLATFORM_PRI_CAPS@)
 taintgrind_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LDADD        = \
@@ -52,7 +52,7 @@ taintgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_SOURCES      = $(TAINTGRIND_SOURCES_COM
 taintgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CPPFLAGS     = \
 	$(AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
 taintgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CFLAGS       = \
-	$(AM_CFLAGS_@VGCONF_PLATFORM_SEC_CAPS@) -O2
+	$(AM_CFLAGS_@VGCONF_PLATFORM_SEC_CAPS@) -O2 -I./capstone-3.0.4/include
 taintgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_DEPENDENCIES = \
 	$(TOOL_DEPENDENCIES_@VGCONF_PLATFORM_SEC_CAPS@)
 taintgrind_@VGCONF_ARCH_SEC@_@VGCONF_OS@_LDADD        = \
